Changelog
=========

1.0.2 (unreleased)
------------------

- Implement uninstall for the package.
  [jone]


1.0.1 (2014-02-05)
------------------

- Cleanup package and declare dependencies.
  [jone]

- Fix maximum recursion depths in certain testing environments.
  This is caused by applying the patch multiple times when the ZCML is
  loaded multiple times.
  [jone]


1.0 (2012-08-15)
----------------

- Initial release